# matrixCalculator

./: .gitignore  CMakeLists.txt  README.md  main.cpp  matrix_calculator.cpp  matrix_calculator.hpp
test/: CMakeLists.txt  CalcTests.cpp
